k3s/yamls/web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
